--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Sign-up Form</title>
 </head>
+
 <body>
-    
+    <div class="background-sidebar"></div>
+    <div class="main-content">
+        <div class="header">One</div>
+        <div class="form-container">Two</div>
+        <div class="footer">Three</div>
+    </div>
 </body>
+
 </html>
