Added background image to the sidebar and credited author

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <div class="background-sidebar"></div>
+    <div class="background-sidebar">
+        <div class="background-credit">Photo by <a href="https://unsplash.com/@hombre?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hombre</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-plant-with-lots-of-leaves-pYAbtWwJslg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
+    </div>
     <div class="main-content">
         <div class="header">One</div>
         <div class="form-container">Two</div>
