--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <div class="background-sidebar">
+        <div class="background-spacer"><div class="background-logo">
+            <img src="images/odin-lined.png" alt="The Odin Project logo">
+            Odin
+        </div>
+    </div>
+        
         <div class="background-credit">Photo by <a href="https://unsplash.com/@hombre?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hombre</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-plant-with-lots-of-leaves-pYAbtWwJslg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
     </div>
     <div class="main-content">
