Added text to the header section and formatted

--- a/index.html
+++ b/index.html
@@ -10,18 +10,31 @@
 
 <body>
     <div class="background-sidebar">
-        <div class="background-spacer"><div class="background-logo">
-            <img src="images/odin-lined.png" alt="The Odin Project logo">
-            Odin
+        <div class="background-spacer">
+            <div class="background-logo">
+                <img src="images/odin-lined.png" alt="The Odin Project logo">
+                Odin
+            </div>
+        </div>
+
+        <div class="background-credit">
+            Photo by <a
+                href="https://unsplash.com/@wyxina?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Wyxina
+                Tresse</a> on <a
+                href="https://unsplash.com/photos/a-close-up-of-a-plant-with-green-leaves-hGCMsDeyazA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         </div>
     </div>
-        
-        <div class="background-credit">Photo by <a href="https://unsplash.com/@hombre?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hombre</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-plant-with-lots-of-leaves-pYAbtWwJslg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
-    </div>
     <div class="main-content">
-        <div class="header">One</div>
+        <div class="header">
+            <p>This is not a real online service! You know you need something like this in your life to help you realise
+                your deepest dreams.<br>Sign up <i>now</i> to get started.</p>
+            <p>You <i>know</i> you want to.</p>
+        </div>
         <div class="form-container">Two</div>
-        <div class="footer">Three</div>
+        <div class="footer">
+            <button>Create Account</button>
+            <p>Already have an account? Log in</p>
+        </div>
     </div>
 </body>
 
