--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="form-container">Two</div>
         <div class="footer">
             <button>Create Account</button>
-            <p>Already have an account? Log in</p>
+            <p>Already have an account? <a href="">Log in</a></p>
         </div>
     </div>
 </body>
