--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </form>
         </div>
         <div class="footer">
-            <button>Create Account</button>
+            <button type="submit">Create Account</button>
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
     </div>
