--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="form-container">
             <h2>Let's do this!</h2>
-            <form action="https://httpbin.org/post" method="post">
+            <form id="sign_up_form" action="https://httpbin.org/post" method="post">
                 <div class="form-row">
                     <div class="form-field">
                         <label for="first_name">FIRST NAME</label>
@@ -66,7 +66,7 @@
             </form>
         </div>
         <div class="footer">
-            <button type="submit">Create Account</button>
+            <button type="submit" form="sign_up_form">Create Account</button>
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
     </div>
