--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
                     <div class="form-field">
                         <label for="password">PASSWORD</label>
                         <input type="password" id="password" name="password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
+                        <span class="invalid-input">Min 8 characters (Uppercase, lowercase and numbers)</span>
                     </div>
                     <div class="form-field">
                         <label for="confirm_password">CONFIRM PASSWORD</label>
                         <input type="password" id="confirm_password" name="confirm_password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
+                        <span class="invalid-input">Min 8 characters (Uppercase, lowercase and numbers)</span>
                     </div>
                 </div>
             </form>
